--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<textarea name="ingredients" id="ingredients" cols="38" rows="5" required></textarea>
 				</label>
 			</fieldset>
-			<button type="submit">Add Recipe</button>
+			<button type="submit" id="submit-button">Add Recipe</button>
 			<button type="button" class="danger">Clear Local Storage</button>
 		</form>
 	</body>
